--- a/exercicios/ex022/fundo005.html
+++ b/exercicios/ex022/fundo005.html
@@ -8,27 +8,26 @@
     <style>
         body {
             height: 100vh;
-            background-color: black;
-            background-image: url(imagens/wallpaper002.jpg);
-            background-repeat: no-repeat;
-            background-position: center top;
+          
+            background: black url(imagens/wallpaper002.jpg) center top no-repeat 
+            fixed;
             background-size: cover;
         }
 
         main {
             background-color: white;
-            width: 400px;
             padding: 10px;
             margin: auto;
             border: 2px solid black;
             border-radius: 10px;
+            max-width: 700px;
         }
     </style>
 </head>
 <body>
     <main>
         <h1>Testando imagem de fundo</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, nihil voluptatibus. Corporis, eaque consequuntur! Ipsam, quis tenetur, dicta dolorem laudantium ducimus nobis ratione delectus quam officiis, error officia dolore Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque eos cum quas nihil assumenda officiis officia, voluptatibus voluptatem necessitatibus omnis blanditiis mollitia at culpa ipsam aut ipsum sit incidunt magnam. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus dolor numquam, eos quibusdam iure nostrum eum. Excepturi, recusandae natus! Vitae, sapiente error doloremque sed quibusdam vero magni illo enim aperiam!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, nihil voluptatibus. Corporis, eaque consequuntur! Ipsam, quis tenetur, dicta dolorem laudantium ducimus nobis ratione delectus quam officiis, error officia dolore Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque eos cum quas nihil assumenda officiis officia, voluptatibus voluptatem necessitatibus omnis blanditiis mollitia at culpa ipsam aut ipsum sit incidunt magnam. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus dolor numquam, eos quibusdam iure nostrum eum. Excepturi, recusandae natus! Vitae, sapiente error doloremque sed quibusdam vero magni illo enim aperiam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, nihil voluptatibus. Corporis, eaque consequuntur! Ipsam, quis tenetur, dicta dolorem laudantium ducimus nobis ratione delectus quam officiis, error officia dolore Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque eos cum quas nihil assumenda officiis officia, voluptatibus voluptatem necessitatibus omnis blanditiis mollitia at culpa ipsam aut ipsum sit incidunt magnam. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus dolor numquam, eos quibusdam iure nostrum eum. Excepturi, recusandae natus! Vitae, sapiente error doloremque sed quibusdam vero magni illo enim aperiam!Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, nihil voluptatibus. Corporis, eaque consequuntur! Ipsam, quis tenetur, dicta dolorem laudantium ducimus nobis ratione delectus quam officiis, error officia dolore Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque eos cum quas nihil assumenda officiis officia, voluptatibus voluptatem necessitatibus omnis blanditiis mollitia at culpa ipsam aut ipsum sit incidunt magnam. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus dolor numquam, eos quibusdam iure nostrum eum. Excepturi, recusandae natus! Vitae, sapiente error doloremque sed quibusdam vero magni illo enim aperiam!Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, nihil voluptatibus. Corporis, eaque consequuntur! Ipsam, quis tenetur, dicta dolorem laudantium ducimus nobis ratione delectus quam officiis, error officia dolore Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque eos cum quas nihil assumenda officiis officia, voluptatibus voluptatem necessitatibus omnis blanditiis mollitia at culpa ipsam aut ipsum sit incidunt magnam. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus dolor numquam, eos quibusdam iure nostrum eum. Excepturi, recusandae natus! Vitae, sapiente error doloremque sed quibusdam vero magni illo enim aperiam!Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, nihil voluptatibus. Corporis, eaque consequuntur! Ipsam, quis tenetur, dicta dolorem laudantium ducimus nobis ratione delectus quam officiis, error officia dolore Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque eos cum quas nihil assumenda officiis officia, voluptatibus voluptatem necessitatibus omnis blanditiis mollitia at culpa ipsam aut ipsum sit incidunt magnam. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus dolor numquam, eos quibusdam iure nostrum eum. Excepturi, recusandae natus! Vitae, sapiente error doloremque sed quibusdam vero magni illo enim aperiam!</p>
     </main>
 </body>
 </html>
