atualizando os exercicios

--- a/exercicios/ex023/tabela02.html
+++ b/exercicios/ex023/tabela02.html
@@ -34,6 +34,12 @@
         tbody > tr:nth-child(2n) {
             background-color: lightgray;
         }
+
+        thead > tr > th {
+            position: sticky;
+            top: 0%;
+            background-color: gray;
+        }
     </style>
 </head>
 <body>
@@ -60,6 +66,162 @@
                 <td>Rio de Janeiro</td>
                 <td class="num">17 264 943</td>
             </tr>
+            <tr>
+                <td>São Paulo</td>
+                <td class="num">45.919.019</td>
+            </tr>
+            <tr>
+                <td>Minas Gerais</td>
+                <td class="num">21 268 791</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="num">17 264 943</td>
+            </tr>
+            <tr>
+                <td>São Paulo</td>
+                <td class="num">45.919.019</td>
+            </tr>
+            <tr>
+                <td>Minas Gerais</td>
+                <td class="num">21 268 791</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="num">17 264 943</td>
+            </tr>
+            <tr>
+                <td>São Paulo</td>
+                <td class="num">45.919.019</td>
+            </tr>
+            <tr>
+                <td>Minas Gerais</td>
+                <td class="num">21 268 791</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="num">17 264 943</td>
+            </tr>
+            <tr>
+                <td>São Paulo</td>
+                <td class="num">45.919.019</td>
+            </tr>
+            <tr>
+                <td>Minas Gerais</td>
+                <td class="num">21 268 791</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="num">17 264 943</td>
+            </tr>
+            <tr>
+                <td>São Paulo</td>
+                <td class="num">45.919.019</td>
+            </tr>
+            <tr>
+                <td>Minas Gerais</td>
+                <td class="num">21 268 791</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="num">17 264 943</td>
+            </tr>
+            <tr>
+                <td>São Paulo</td>
+                <td class="num">45.919.019</td>
+            </tr>
+            <tr>
+                <td>Minas Gerais</td>
+                <td class="num">21 268 791</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="num">17 264 943</td>
+            </tr>
+            <tr>
+                <td>São Paulo</td>
+                <td class="num">45.919.019</td>
+            </tr>
+            <tr>
+                <td>Minas Gerais</td>
+                <td class="num">21 268 791</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="num">17 264 943</td>
+            </tr>
+            <tr>
+                <td>São Paulo</td>
+                <td class="num">45.919.019</td>
+            </tr>
+            <tr>
+                <td>Minas Gerais</td>
+                <td class="num">21 268 791</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="num">17 264 943</td>
+            </tr>
+            <tr>
+                <td>São Paulo</td>
+                <td class="num">45.919.019</td>
+            </tr>
+            <tr>
+                <td>Minas Gerais</td>
+                <td class="num">21 268 791</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="num">17 264 943</td>
+            </tr>
+            <tr>
+                <td>São Paulo</td>
+                <td class="num">45.919.019</td>
+            </tr>
+            <tr>
+                <td>Minas Gerais</td>
+                <td class="num">21 268 791</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="num">17 264 943</td>
+            </tr>
+            <tr>
+                <td>São Paulo</td>
+                <td class="num">45.919.019</td>
+            </tr>
+            <tr>
+                <td>Minas Gerais</td>
+                <td class="num">21 268 791</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="num">17 264 943</td>
+            </tr>
+            <tr>
+                <td>São Paulo</td>
+                <td class="num">45.919.019</td>
+            </tr>
+            <tr>
+                <td>Minas Gerais</td>
+                <td class="num">21 268 791</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="num">17 264 943</td>
+            </tr>
+            <tr>
+                <td>São Paulo</td>
+                <td class="num">45.919.019</td>
+            </tr>
+            <tr>
+                <td>Minas Gerais</td>
+                <td class="num">21 268 791</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="num">17 264 943</td>
+            </tr>
         </tbody>
         <tfoot>
             <tr>
@@ -68,5 +230,6 @@
             </tr>
         </tfoot>
     </table>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam hic mollitia reprehenderit tempora magni repellat odit ipsum aliquid officia cumque eum qui veniam fugit obcaecati et atque illo, consequatur culpa. Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, deserunt mollitia excepturi neque et aliquam id, odit sunt perspiciatis amet animi dolorum modi illo ducimus. Unde, maxime! Maiores, eaque consectetur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis harum nisi exercitationem aliquam. Et aut quasi nesciunt rerum quam cumque impedit molestias nobis nisi voluptatibus. Magni quod repellat temporibus vel. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Hic facilis cumque, nobis neque facere vero id, odit sapiente eius ad perspiciatis totam distinctio, temporibus saepe dolor. Voluptatem nesciunt facilis neque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum vero autem officiis iste, corporis vitae aut ullam iusto neque consectetur recusandae reiciendis sit pariatur repellendus temporibus. Quisquam voluptatibus enim dolores. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam quas corrupti illo impedit unde delectus sunt eos dicta voluptate dolore quibusdam repellat nihil molestiae reiciendis natus, dolor voluptatum, iure nesciunt? Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde dolor sed quaerat dicta inventore explicabo, laborum, suscipit cupiditate tempora necessitatibus adipisci? Maxime recusandae nam doloribus eaque rerum nemo soluta nulla. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum cupiditate molestias id aliquam neque corporis. Cumque ab expedita consequuntur ex obcaecati deleniti optio quasi, mollitia, non nulla nobis quae voluptatem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero illo sequi assumenda deleniti explicabo. Id autem quam in qui velit mollitia obcaecati nam, distinctio unde? Rerum, minus! Temporibus, culpa incidunt? Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam quis minima, rem tempora est quaerat doloribus fugit unde voluptas, dolores odit modi aliquam obcaecati. Inventore quo itaque odio magni dolores. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta illum beatae pariatur officia corporis, recusandae consequatur doloribus quis libero? Natus ipsa quibusdam similique soluta earum autem sint deleniti inventore quam! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem blanditiis qui recusandae maiores nihil accusantium pariatur necessitatibus quaerat sapiente nostrum aliquam est unde, quisquam rem veniam, accusamus suscipit voluptatibus explicabo. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis placeat perspiciatis fugiat rerum impedit molestiae error facere explicabo asperiores sequi recusandae, dolores nemo ab, dolorem facilis non? Eligendi, necessitatibus provident. Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis impedit fuga nobis distinctio ut dolorum atque, error vero saepe modi doloremque dicta totam veritatis corrupti sit aperiam, ipsa quidem nisi! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat dicta doloremque commodi accusantium iusto fugit saepe quod corporis eos atque, odio facilis aut, alias omnis quos unde deleniti impedit consequuntur! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo perspiciatis debitis, aut consectetur ducimus ipsam accusantium cum exercitationem ab necessitatibus fugit dolorem officia eius saepe. Ipsa quos placeat magnam dolore!</p>
 </body>
 </html>
