fazendo os exercicios

--- a/exercicios/ex024/iframe03.html
+++ b/exercicios/ex024/iframe03.html
@@ -32,7 +32,7 @@
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae ad earum voluptas minima facere provident quis suscipit velit neque recusandae, dolorem necessitatibus amet, quas illum, assumenda corrupti! Est, iure accusantium?
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, magnam sed ducimus ad non dolorem reprehenderit ex repellendus nisi consequuntur laboriosam voluptate, quas repellat recusandae saepe consequatur quo ratione quam.
 
-        <iframe name="frame"></iframe>
+        <iframe name="frame" srcdoc="<h1>Escolha uma das opções acima para poder ser exibido aqui.</h1>"></iframe>
     </p>
 </body>
 </html>
